--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,17 @@
     "require": {
         "ext-json": "*"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
+    },
     "autoload": {
         "psr-4": {
             "lShamanl\\ApiAnswer\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "lShamanl\\ApiAnswer\\": "tests/"
         }
     }
 }
